<resources>
    <string name="app_name" translatable="false">WSN Monitoring</string>

    <!-- Hint texts -->
    <string name="hint_email">E-Mail</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_security_question">Security question</string>
    <string name="hint_security_question_answer">Securty question answer</string>

    <!-- Button texts -->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Error texts -->
    <string name="error_wrong_fields">Wrong username or password</string>
    <string name="error_general">Something went wrong</string>

</resources>